# x402-client-c

./: .gitignore  BoATLibs.conf  LICENSE  Makefile  README.md  config.py
BoAT-Engine/: Makefile  README.md
BoAT-Engine/include/: BoAT-Engine.conf  boatEngine.h
BoAT-Engine/network/: CMakeLists.txt  Makefile
BoAT-Engine/protocol/: CMakeLists.txt  Makefile  boatprotocols.h
BoAT-Engine/protocol/boatethereum/: boatethereum.c
BoAT-Engine/protocol/common/: CMakeLists.txt  Makefile
BoAT-Engine/protocol/common/web3intf/: web3intf.c  web3intf.h
BoAT-Engine/wallet/: CMakeLists.txt  Makefile  api_ethereum.c
BoAT-SupportLayer/: Makefile  README.md
BoAT-SupportLayer/common/: Makefile
BoAT-SupportLayer/common/storage/: persiststore.c
BoAT-SupportLayer/keystore/soft/: boat_keystore_soft.c
BoAT-SupportLayer/platform/linux-default/: README.md  external.env
BoAT-SupportLayer/platform/linux-default/src/dal/: boati2c.c
BoAT-SupportLayer/platform/linux-default/src/dal/http/: curlport.c
BoAT-SupportLayer/platform/linux-default/src/log/: boatlog.h
x402-demo/: Makefile  credentials.key.example  eip-3009.c  entry.c  x402-demo.c  x402-demo.h  x402-httpclient.c
